// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: lightMaterial texture prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from second to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-light-material"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Diffcuse color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#ffffff",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Diffuse map
    </div>
    <div
      className="item-content item-texture"
    >
      <div
        className="texture-img"
        onClick={[Function]}
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <div
          className="img-dragBg"
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
        />
        <img
          src="texture1img"
        />
      </div>
      <button
        className="texture-remove"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </article>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Shininess
    </div>
    <div
      className="item-content"
    >
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="32"
      />
    </div>
  </article>
</article>
`;

exports[`redo_undo: lightMaterial texture prepare first step: set currentSceneTreeNode test redo operate test redo two step undo step which from second to zero,redo step which from zero to second 1`] = `
<article
  className="wonder-light-material"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Diffcuse color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#ffffff",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Diffuse map
    </div>
    <div
      className="item-content item-texture"
    >
      <div
        className="texture-img"
        onClick={[Function]}
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <div
          className="img-dragBg"
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
        />
        <img
          src="texture2img"
        />
      </div>
      <button
        className="texture-remove"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </article>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Shininess
    </div>
    <div
      className="item-content"
    >
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="32"
      />
    </div>
  </article>
</article>
`;

exports[`redo_undo: lightMaterial texture prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<article
  className="wonder-light-material"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Diffcuse color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#ffffff",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Diffuse map
    </div>
    <div
      className="item-content item-texture"
    >
      <div
        className="texture-img"
        onClick={[Function]}
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <div
          className="img-dragBg"
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
        />
        <img
          src="texture2img"
        />
      </div>
      <button
        className="texture-remove"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </article>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Shininess
    </div>
    <div
      className="item-content"
    >
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="32"
      />
    </div>
  </article>
</article>
`;

exports[`redo_undo: lightMaterial texture prepare first step: set currentSceneTreeNode test undo operate test undo one step step which from second to first 1`] = `
<article
  className="wonder-light-material"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Diffcuse color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#ffffff",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Diffuse map
    </div>
    <div
      className="item-content item-texture"
    >
      <div
        className="texture-img"
        onClick={[Function]}
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <div
          className="img-dragBg"
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
        />
        <img
          src="texture1img"
        />
      </div>
      <button
        className="texture-remove"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </article>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Shininess
    </div>
    <div
      className="item-content"
    >
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="32"
      />
    </div>
  </article>
</article>
`;

exports[`redo_undo: lightMaterial texture prepare first step: set currentSceneTreeNode test undo operate test undo two step step which from second to zero 1`] = `
<article
  className="wonder-light-material"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Diffcuse color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#ffffff",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Diffuse map
    </div>
    <div
      className="item-content item-texture"
    >
      <div
        className="texture-img"
        onClick={[Function]}
        style={
          Object {
            "opacity": "1",
          }
        }
      >
        <div
          className="img-dragBg"
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
        />
      </div>
      <button
        className="texture-remove"
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </article>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
    >
      Shininess
    </div>
    <div
      className="item-content"
    >
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="32"
      />
    </div>
  </article>
</article>
`;
